更新方法区相关内容